<resources>
    <string name="app_name">TheWisher</string>
    <string name="connexion">Login</string>
    <string name="inscription">Registration</string>
    <string name="sinscrire">"Sign up"</string>
    <string name="Connexion">Connexion</string>
    <string name="pseudo">Pseudo...</string>
    <string name="mot_de_passe">Mot de passe...</string>
    <string name="connexion_btn">Button</string>
    <string name="inscription_btn">Button</string>
    <string name="recherche_d_amis">Recherche d\'amis</string>
    <string name="Bouton_Add_Friend">"BoutonAddFriend"</string>
    <string name="output">output_search</string>
    <string name="output_search">output_search</string>
    <string name="Ajouter_un_cadeau">"Add a wish"</string>
    <string name="Nom_du_cadeau">"Name"</string>
    <string name="Description">"Description"</string>
    <string name="Prix">"Price"</string>
    <string name="URL">"URL"</string>
    <string name="Add">"Add"</string>
    <string name="Bouton_Profil">"BoutonProfil"</string>
    <string name="Bouton_Wish">"BoutonWish"</string>
    <string name="Bouton_Friend">"BoutonFriend"</string>
    <string name="Whishlists1">"Wishlists"</string>
    <string name="Background">"BG"</string>
    <string name="Nom_de_l_ami">"Name of the friend"</string>
    <string name="Bouton_Add_Image">"BoutonAddImage"</string>
    <string name="Add_a_whishlist">"Add a wishlist"</string>
    <string name="Bouton_Privacy">"Change privacy"</string>
    <string name="Bouton_Privacy_img">"🔓"</string>
    <string name="Bouton_Privacy_img2">"🔒"</string>
    <string name="New_List_Name">"Please name the new whishlist"</string>
    <string name="Friends">"Friends"</string>
    <string name="Friends2">"Your friend list"</string>
    <string name="Friends3">"To add new friends "</string>
    <string name="InscriptionP">"First name "</string>
    <string name="InscriptionN">"Last name "</string>
    <string name="InscriptionM">"Email address "</string>
    <string name="InscriptionPs">"Pseudo "</string>
    <string name="InscriptionPa">"Password "</string>
    <string name="ModifProfile">"Profile adjustement "</string>
    <string name="ModifProfileF">"  Finished "</string>
    <string name="ModifProfileM">"  Preferences and address "</string>
    <string name="ModifProfileD">"  Logout "</string>
    <string name="Pref">" Preferences  "</string>
    <string name="PrefC">" Colour "</string>
    <string name="PrefS">" Size "</string>
    <string name="PrefT">" Theme "</string>
    <string name="PrefA">" Address "</string>
    <string name="PrefAd">" Please write your address "</string>
    <string name="PrefU">"  Update  "</string>
    <string name="ProfileV">"  Variable  "</string>
    <string name="ProfileP">"  Profile  "</string>
    <string name="ProfileW">"  Your wishlists   "</string>
    <string name="add_friend">Add Friend</string>
    <string name="search">Search ...</string>
    <string name="content">Content:</string>
    <string name="friend_requests">friend requests</string>
    <string name="requests">Requests:</string>
    <string name="username">Username</string>


    <string-array name="Color">
        <item>None</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
    </string-array>

    <string-array name="TailleVetement">
        <item>None</item>
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>

    <string-array name="TailleChaussure">
        <item>None</item>
        <item>37-38</item>
        <item>38-39</item>
        <item>39-40</item>
        <item>40-41</item>
        <item>41-42</item>
        <item>42-43</item>
    </string-array>

    <string-array name="Thèmes">
        <item>None</item>
        <item>Garden</item>
        <item>Furniture</item>
        <item>Sport</item>
        <item>Media</item>
        <item>Devices</item>
    </string-array>

    <string-array name="Wishlists">
        //MySQLiteOpenHelper.getWishlists();
    </string-array>
</resources>
