<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Background"
        android:scaleType="matrix"
        android:src="@drawable/backgroundapp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#DADADA"
            android:contentDescription="@string/ModifProfile"
            android:gravity="center"
            android:text="@string/ModifProfile"
            android:textColor="#000000"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#009E9A9A"
                android:gravity="center"
                android:textColorHint="#FF9800"
                app:passwordToggleTint="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Fisrtname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/InscriptionP"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#009E9A9A"
                android:gravity="center"
                android:textColorHint="#FF9800"
                app:passwordToggleTint="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/InscriptionN"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#009E9A9A"
                android:gravity="center"
                android:textColorHint="#FF9800"
                app:passwordToggleTint="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:hint="@string/InscriptionM"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/ButtonTerminerModif"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#FF9800"
                        android:contentDescription="@string/ModifProfileF"
                        android:text="@string/ModifProfileF"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/modifPref"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center|center_horizontal"
                        android:layout_weight="1"
                        android:background="#FF9800"
                        android:gravity="center"
                        android:text="@string/ModifProfileM"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/buttonLogout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#F5C60404"
                        android:gravity="center"
                        android:text="@string/ModifProfileD"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonProfil"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="#FF9800"
                android:contentDescription="@string/Bouton_Profil"
                android:foregroundTint="#FF9800"
                android:visibility="visible"
                app:srcCompat="@drawable/icons8_utilisateur_96" />

            <ImageButton
                android:id="@+id/buttonAddGift"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="#FF9800"
                android:contentDescription="@string/Bouton_Wish"
                android:foregroundTint="#FF9800"
                app:srcCompat="@drawable/icons8_ajouter_96" />

            <ImageButton
                android:id="@+id/buttonFriends"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="#FF9800"
                android:contentDescription="@string/Bouton_Friend"
                android:foregroundTint="#FF9800"
                android:visibility="visible"
                app:srcCompat="@drawable/icons8_user_group_2_96" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>