<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Background"
        android:scaleType="matrix"
        android:src="@drawable/backgroundapp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="#DADADA"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/txtAmiCherche"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/Nom_de_l_ami"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Nom_de_l_ami"
                android:textColor="#000000"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="6"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="#DADADA"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Whishlists1"
                android:textColor="#000000"
                android:textSize="30sp"
                android:visibility="visible" />

            <ScrollView
                android:id="@+id/scrollWishlistFriend"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="7"
                android:alpha="0.5"
                android:background="#DADADA">

                <LinearLayout
                    android:id="@+id/scrollWishlistFriendTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonProfil"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="#FF9800"
                android:contentDescription="@string/Bouton_Profil"
                android:foregroundTint="#FF9800"
                android:visibility="visible"
                app:srcCompat="@drawable/icons8_utilisateur_96" />

            <ImageButton
                android:id="@+id/buttonAddGift"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="#FF9800"
                android:contentDescription="@string/Bouton_Wish"
                android:foregroundTint="#FF9800"
                app:srcCompat="@drawable/icons8_ajouter_96" />

            <ImageButton
                android:id="@+id/buttonFriends"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="#FF9800"
                android:contentDescription="@string/Bouton_Friend"
                android:foregroundTint="#FF9800"
                android:visibility="visible"
                app:srcCompat="@drawable/icons8_user_group_2_96" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>